# restructured-dsa

./: .gitignore  CLAUDE.md  README.md  notes-style.tex  pyproject.toml
.claude/agents/: architect.md  implementer.md  reviewer.md  test-writer.md
.claude/commands/: auto.md  design.md  implement.md  next.md
.claude/scripts/: manifest-conformance.sh
.githooks/: pre-commit
app/: __init__.py  config.py  designation.py  discovery.py  main.py  parser.py  sandbox.py
app/persistence/: __init__.py  connection.py  notes.py  quizzes.py  section_completions.py
app/static/: base.css  lecture.css  quiz.css
app/templates/: _nav_rail.html.j2  _notes_rail.html.j2  (+4 more)
coding_practice/: CMakeLists.txt  ch_3.cpp
coding_practice/assignments/VectorSorting/: VectorSorting.cpp  eBid_Monthly_Sales_Dec_2016.csv
cs300/: app.py
design_docs/: MANIFEST.md  architecture.md
tests/: conftest.py  test_designation.py  test_latex_readonly.py  test_lecture_route.py  test_parser.py  test_passthrough.py  test_task001_conformance.py  test_task001_designation_edges.py  test_task001_http_edges.py  test_task001_identity.py  test_task001_lecture_page.py  test_task001_parser_edges.py  test_task001_readonly_edges.py  test_task001_rendering_fidelity.py  test_task002_navigation.py  test_task004_parser_fidelity.py  test_task005_multi_chapter_smoke.py  test_task007_tabular_residue.py  test_task007_texttt_as_span.py  test_task008_parser_fidelity.py  test_task009_notes_bootstrap.py  test_task010_section_completion.py  test_task011_chapter_progress_and_supersedures.py  test_task012_rhs_notes_rail_and_redirect.py  test_task013_quiz_schema.py  test_task013_quiz_surface_http.py  test_task014_quiz_generation.py  test_task015_quiz_taking.py  test_task016_questions_carry_test_suite.py  test_task017_persistence.py  test_task017_run_tests_route.py  test_task017_sandbox.py  test_task018_preamble.py  test_task019_grade_attempt_workflow.py  test_task019_grade_persistence.py  test_task019_grading_processor.py  test_task019_take_page_rendering.py
(+193 files in other folders)
