[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "restructured-cs300"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pylatexenc>=2.10",
    "jinja2>=3.1",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[tool.pytest.ini_options]
markers = [
    "task(id): tag tests with the task ID that introduced them",
]
testpaths = ["tests"]
