[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "restructured-cs300"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pylatexenc>=2.10",
    "jinja2>=3.1",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "requests>=2.28.0",
]

[tool.pytest.ini_options]
markers = [
    "task(id): tag tests with the task ID that introduced them",
]
testpaths = ["tests"]

# Playwright configuration per ADR-010:
# - Default browser: Chromium
# - Screenshots: on (one per test for human review of last run)
# - Traces: retain-on-failure (for debugging)
# - Video: retain-on-failure (not default-on; see ADR-010)
# - Artifact directory: tests/playwright/artifacts/ (gitignored per ADR-010)
addopts = [
    "--screenshot=on",
    "--output=tests/playwright/artifacts",
    "--tracing=retain-on-failure",
]
